# mkxp-z

./: .gitignore  README.md  meson.build  meson_options.txt  mkxp.json
.github/workflows/: autobuild.yml
binding/: audio-binding.cpp  binding-mri.cpp  binding-util.cpp  binding-util.h  bitmap-binding.cpp  disposable-binding.h  etc-binding.cpp  filesystem-binding.cpp  font-binding.cpp  graphics-binding.cpp  http-binding.cpp  input-binding.cpp  miniffi-binding.cpp  sceneelement-binding.h  serializable-binding.h  sprite-binding.cpp  table-binding.cpp  tilemap-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  window-binding.cpp
binding-sandbox/: audio-binding.h  binding-base.cpp  binding-base.h  binding-sandbox.h  binding-util.cpp  binding-util.h  bitmap-binding.h  core.h  etc-binding.h  font-binding.h  graphics-binding.h  input-binding.h  plane-binding.h  sandbox.cpp  sandbox.h  sprite-binding.h  table-binding.h  tilemap-binding.h  types.h  viewport-binding.h  wasi.cpp  wasi.h  wasm-rt.cpp  wasm-rt.h  window-binding.h
linux/: Makefile  meson-arm64.txt  meson-armv6.txt  meson-armv7-neon.txt  meson-armv7.txt  meson-power8le.txt  meson-power9le.txt  meson-riscv64.txt  meson-s390x.txt  meson-x86_64.txt  target-arm64.sh  target-armv6.sh  target-armv7-neon.sh  target-armv7.sh  target-power8le.sh  target-power9le.sh  target-riscv64.sh  target-s390x.sh  toolchain-arm32.cmake  toolchain-arm64.cmake  toolchain-ppc64le.cmake  toolchain-riscv64.cmake  toolchain-s390x.cmake  vars.sh
macos/: Info.plist  icon.icns
macos/Dependencies/: common.make  dependencies.make
macos/config/: mkxp.xcconfig  steamshim.xcconfig
macos/mkxp-z.xcodeproj/: project.pbxproj
macos/mkxp-z.xcodeproj/xcshareddata/xcschemes/: Intel (Steam).xcscheme  Intel.xcscheme  Universal (Steam).xcscheme  Universal.xcscheme
macos/views/: SettingsMenuController.mm  TouchBar.mm
retro/: Makefile  README.md  core.info  emscripten-patch.sh  extra-ruby-bindings.h  retroarch-1.20.0-libnx.patch  ruby-bindings.h  sandbox-bindgen.rb  symbols.txt
scripts/preload/: ruby18_wrap.rb  ruby_classic_wrap.rb  win32_wrap.rb
shader/: bicubic.frag  lanczos3.frag  meson.build
src/: config.cpp  config.h  core.cpp  core.h  eventthread.cpp  eventthread.h  git-hash.h.in  main.cpp  meson.build  settingsmenu.cpp  sharedstate.cpp
src/audio/: al-util.h  aldatasource.h  alstream.cpp  alstream.h  audio.cpp  audio.h  audiostream.cpp  audiostream.h  fluid-fun.cpp  fluid-fun.h  midisource.cpp  sdlsoundsource.cpp  sharedmidistate.h  sndfilesource.cpp  soundemitter.cpp  soundemitter.h  vorbissource.cpp
src/display/: bitmap.cpp  bitmap.h  font.cpp  font.h  graphics.cpp  graphics.h  plane.cpp  sprite.cpp  tilemap-common.h  tilemap.cpp  tilemapvx.cpp  viewport.cpp  window.cpp  window.h  windowvx.cpp
src/display/gl/: gl-fun.h  gl-meta.cpp  gl-meta.h  gl-util.h  glstate.cpp  shader.cpp  shader.h
src/etc/: etc-internal.h  etc.cpp  etc.h
src/filesystem/: filesystem.cpp  filesystem.h  filesystemImpl.cpp  filesystemImplApple.mm
src/input/: input-retro.cpp  input.cpp  input.h
src/sandbox/: sandbox.cpp  sandbox.h  types.h  wasi.cpp  wasi.h
src/system/: systemImplApple.mm
src/util/: debugwriter.h  disposable.h  exception.h  sdl-util.h  serial-util.h
subprojects/: .gitignore  boost_any.wrap  boost_asio.wrap  boost_assert.wrap  boost_config.wrap  boost_container_hash.wrap  boost_core.wrap  boost_describe.wrap  boost_mp11.wrap  boost_optional.wrap  boost_static_assert.wrap  boost_throw_exception.wrap  boost_type_index.wrap  boost_type_traits.wrap  bzip2.wrap  flac.wrap  fluidlite.wrap  liblzma.wrap  libsndfile.wrap  libzip.wrap  lzma.wrap  mpg123.wrap  ogg.wrap  openal-soft.wrap  opus.wrap  physfs.wrap  vorbis.wrap  zlib-darwin.wrap  zlib.wrap  zstd.wrap
subprojects/packagefiles/: flac-buildtype.patch  flac-deps.patch  flac-emscripten-endian.patch  flac-int32.patch  fluidlite-emscripten-endian.patch  fluidlite.patch  liblzma.patch  libsndfile-deps.patch  libsndfile-emscripten-endian.patch  libsndfile-int32.patch  libsndfile-offset.patch  libsndfile.patch  libzip-deps.patch  libzip-emscripten-endian.patch  libzip.patch  lzma.patch  mpg123-emscripten-endian.patch  mpg123-intrinsics.patch  mpg123-libsyn123.patch  mpg123-offset.patch  mpg123-signal.patch  ogg-deps.patch  ogg.patch  openal-soft-android-log.patch  openal-soft-atomic.patch  openal-soft-buildtype.patch  openal-soft-c11.patch  openal-soft-darwin-log.patch  openal-soft-debug.patch  openal-soft-devkitarm.patch  openal-soft-devkitppc.patch  openal-soft-emscripten-pthread.patch  openal-soft-emscripten-setschedparam.patch  openal-soft-emscripten-symbol-conflict.patch  openal-soft-emscripten-tss.patch  openal-soft-emscripten.patch  openal-soft-event-thread.patch  openal-soft-flockfile.patch  openal-soft-int32.patch  openal-soft.patch  (+13 more)
subprojects/packagefiles/mpg123/: CMakeLists.txt
tests/benchmark-bitmap-dup/: dup-speed-test.rb
tests/graphics-transition/: transition.rb
tests/hires-bitmap/: hires-bitmap-test.rb
tests/hires-bitmap/Graphics/Pictures/: children-alpha-lo.jxl  tree_alpha_16bit.jxl
tests/hires-bitmap/Hires/Graphics/Pictures/: children-alpha.jxl  tree_alpha_16bit.jxl
tests/hires-sprite/: hires-sprite-test.rb
tests/hires-sprite/Hires/Graphics/Pictures/: OST_009.jxl
tests/http/: http.rb
tests/stretch-blt-bounds/: stretch-blt-test.rb
tests/stretch-blt-bounds/Graphics/Pictures/: OST_009.jxl
windows/: Makefile  meson.build  resource.rc
